--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Contemplating the Canopy. All rights reserved. Design: Arianna McGlynn | Humboldt State University </p>
+						<p>Contemplating the Canopy. All rights reserved. Design: Arianna McGlynn | Humboldt State University Forestry </p>
 					</footer>
 
 			</div>
