--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
 						<!-- Thumbnails -->
 							<section class="thumbnails">
-								<!--<div>
-									<a href="images/police_map.png">
-										<img src="images/police_map.png" alt="" />
-										<h3>Police Shooting In United States</h3>
-									</a>
+								<div>
+									<a href="images/Map3_Vietnam.png">
+										<img src="images/Map3_Vietnam.png" alt="" />
+										<h3>My Newest Map</h3>
+									<!--</a>
 									<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
 										<h3>Crude Oil Spills</h3>
