--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 									<a href="images/Map3_Vietnam.png">
 										<img src="images/Map3_Vietnam.png" alt="" />
 										<h3>My Newest Map</h3>
-									<!--</a>
-									<a href="images/Oilspills_map.png">
+									</a>
+									<!--<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
 										<h3>Crude Oil Spills</h3>
 									</a>
