--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 										<img src="images/Map3_Vietnam.png" alt="" />
 										<h3>My Newest Map</h3>
 									</a>
-									<!--<a href="images/Oilspills_map.png">
-										<img src="images/Oilspills_map.png" alt="" />
-										<h3>Crude Oil Spills</h3>
+									<a href="images/MapBLab4.png">
+										<img src="images/MapBLab4.png" alt="" />
+										<h3>Projection Practice with Perua and Bolivia</h3>
 									</a>
-									<a href="images/Oil_Pipelines-01.png">
+									<!--<a href="images/Oil_Pipelines-01.png">
 										<img src="images/Oil_Pipelines-01.png" alt="" />
 										<h3>Gulf Coast Energy Network</h3>
 									</a>
