--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<div>
 									<a href="images/Map3_Vietnam.png">
 										<img src="images/Map3_Vietnam.png" alt="" />
-										<h3>My Newest Map</h3>
+										<h3>Map-making Practice with Oddly Shaped Countries</h3>
 									</a>
 									<a href="images/MapBLab4.png">
 										<img src="images/MapBLab4.png" alt="" />
