--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									</a>
 									<a href="images/MapBLab4.png">
 										<img src="images/MapBLab4.png" alt="" />
-										<h3>Projection Practice with Perua and Bolivia</h3>
+										<h3>Projection Practice with Peru and Bolivia</h3>
 									</a>
 									<!--<a href="images/Oil_Pipelines-01.png">
 										<img src="images/Oil_Pipelines-01.png" alt="" />
