--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 										<img src="images/MapBLab4.png" alt="" />
 										<h3>Projection Practice with Peru and Bolivia</h3>
 									</a>
-									<!--<a href="images/Oil_Pipelines-01.png">
-										<img src="images/Oil_Pipelines-01.png" alt="" />
-										<h3>Gulf Coast Energy Network</h3>
+									<a href="MN_Map_Lab5a_finished.png">
+										<img src="images/MN_Map_Lab5a_finished.png" alt="" />
+										<h3>Labeling Minnesota Part 1</h3>
 									</a>
-								</div>-->
+								<!--</div>-->
 								<!--<div>
 									<a href="images/States_map.png">
 										<img src="images/States_map.png" alt="" />
