--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 										<img src="images/MapBLab4.png" alt="" />
 										<h3>Projection Practice with Peru and Bolivia</h3>
 									</a>
-									<a href="MN_Map_Lab5a_finished.png">
-										<img src="images/MN_Map_Lab5a_finished.png" alt="" />
-										<h3>Labeling Minnesota Part 1</h3>
+									<a href="Lab5b_Map.png">
+										<img src="images/Lab5b_Map.png" alt="" />
+										<h3>Labeling Parts of Minnesota</h3>
 									</a>
 								<!--</div>-->
 								<!--<div>
