--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 										<h3>Labeling Parts of Minnesota</h3>
 									</a>
 								<!--</div>-->
-								<!--<div>
-									<a href="images/States_map.png">
-										<img src="images/States_map.png" alt="" />
-										<h3>US Capitals</h3>
+								<div>
+									<a href="images/Layout1.png">
+										<img src="images/Layout1.png" alt="" />
+										<h3>Denmark Major Citys and Water Bodies</h3>
 									</a>
-									<a href="images/Coastline_map.png">
+									<!--<a href="images/Coastline_map.png">
 										<img src="images/Coastline_map.png" alt="" />
 										<h3>Louisiana Coastline</h3>
 									</a>
