--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 										<img src="images/Layout1.png" alt="" />
 										<h3>Denmark Major Citys and Water Bodies</h3>
 									</a>
-									<!--<a href="images/Coastline_map.png">
-										<img src="images/Coastline_map.png" alt="" />
-										<h3>Louisiana Coastline</h3>
+									<a href="images/lab6bmap.png">
+										<img src="images/lab6bmap.png" alt="" />
+										<h3>Denmark Major Features</h3>
 									</a>
-									<a href="images/Portland_map.png">
+									<!--<a href="images/Portland_map.png">
 										<img src="images/Portland_map.png" alt="" />
 										<h3>Portland Landscape</h3>
 									</a>
