--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 										<img src="images/Layout1.png" alt="" />
 										<h3>Denmark Major Citys and Water Bodies</h3>
 									</a>
-									<a href="images/lab6bmap.png">
-										<img src="images/lab6bmap.png" alt="" />
+									<a href="images/denmarkfinal.png">
+										<img src="images/denmarkfinal.png" alt="" />
 										<h3>Denmark Major Features</h3>
 									</a>
 									<!--<a href="images/Portland_map.png">
