--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 										<img src="images/denmarkfinal.png" alt="" />
 										<h3>Denmark Major Features</h3>
 									</a>
-									<!--<a href="images/Portland_map.png">
-										<img src="images/Portland_map.png" alt="" />
-										<h3>Portland Landscape</h3>
+									<a href="images/electionmap.png">
+										<img src="images/electionmap.png" alt="" />
+										<h3>Election Map Practice</h3>
 									</a>
-								</div>-->
+								<!--</div>-->
 								<!--<div>
 									<a href="images/Transit_map.png">
 										<img src="images/Transit_map.png" alt="" />
