--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 										<img src="images/electionmap.png" alt="" />
 										<h3>Election Map Practice</h3>
 									</a>
-								<!--</div>-->
-								<!--<div>
-									<a href="images/Transit_map.png">
-										<img src="images/Transit_map.png" alt="" />
-										<h3>Humboldt Transit System</h3>
+								</div>-->
+								<div>
+									<a href="images/winemap.png">
+										<img src="images/winemap.png" alt="" />
+										<h3>Wine Map</h3>
 									</a>
-									<a href="images/US_map.png">
+									<!--<a href="images/US_map.png">
 										<img src="images/US_map.png" alt="" />
 										<h3>Physical Map of United States</h3>
 									</a>
