--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 										<img src="images/winemap.png" alt="" />
 										<h3>Wine Map</h3>
 									</a>
-									<!--<a href="images/US_map.png">
-										<img src="images/US_map.png" alt="" />
-										<h3>Physical Map of United States</h3>
+									<a href="images/United_States_Deaths_in_1941.png">
+										<img src="images/United_States_Deaths_in_1941.png" alt="" />
+										<h3>United States Deaths in 1941</h3>
 									</a>
-								</div>-->
+								</div>
 							<!--</section>
 						<div>
 						<iframe width="785" height="500" src="https://dikembe3000.github.io/Mural_Project/" frameborder="0" width="100%" height="800"></iframe>
