--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 										<h3>United States Deaths in 1941</h3>
 									</a>
 								</div>
-							<!--</div>
+							</div>
 								<div>
-									<a href="images/winemap.png">
-										<img src="images/winemap.png" alt="" />
-										<h3>Wine Map</h3>
+									<a href="images/MadTerrainMap.png">
+										<img src="images/MadTerrainMap.png" alt="" />
+										<h3>Madagascar Terrain Map</h3>
 									</a>
-									<a href="images/United_States_Deaths_in_1941.png">
+									<!--<a href="images/United_States_Deaths_in_1941.png">
 										<img src="images/United_States_Deaths_in_1941.png" alt="" />
 										<h3>United States Deaths in 1941</h3>-->
 									</a>
